<resources>
    <string name="app_name">YouPiP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_label">label example</string>
    <string name="favorite_list">Danh sách yêu thích</string>
    <string name="watch_list_later">Danh sách xem sau</string>
    <string name="community">Cộng đồng</string>
    <string name="message">Tin nhắn</string>
    <string name="notification">Thông báo</string>
    <string name="cancel">Huỷ bỏ</string>
    <string name="confirm">Đồng ý</string>
    <string name="setting">Cài đặt</string>
    <string name="code">Mã kết bạn</string>
    <string name="full_name">Họ Tên</string>
    <string name="search_friend">Tìm bạn bè</string>
</resources>