<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/radius_30_primary"
    android:layout_width="match_parent"
    android:padding="@dimen/_12sdp"
    android:layout_height="wrap_content">
    <TextView
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/white"
        android:id="@+id/title"
        android:text="@string/notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center_horizontal"
        android:text="@string/favorite_list"
        android:id="@+id/content"
        android:layout_below="@+id/title"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_below="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            android:textAllCaps="false"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:layout_weight="1"
            android:backgroundTint="#AEAEAE"
            android:textColor="@color/black"
            android:text="@string/cancel"
            app:cornerRadius="@dimen/_16sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirm"
            android:backgroundTint="#4463FF"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/confirm"
            app:cornerRadius="@dimen/_16sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>