<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragment.more.SettingFragment">

    <Toolbar
        android:layout_alignParentTop="true"
        android:id="@+id/toolBar"
        android:background="@color/primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:theme="@style/Toolbar.Title"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </Toolbar>
    <LinearLayout
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_below="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:fontFamily="@font/montserrat_bold"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text="@string/code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:fontFamily="@font/montserrat_bold"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text=":"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/short_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:fontFamily="@font/montserrat_bold"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text="@string/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:fontFamily="@font/montserrat_bold"
                android:layout_marginEnd="@dimen/_4sdp"
                android:text=":"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/fullname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:paddingVertical="12dp"
            android:id="@+id/contact"
            android:layout_marginTop="@dimen/_12sdp"
            android:textColor="@color/primary"
            android:fontFamily="@font/montserrat_bold"
            android:text="Liên hệ chúng tôi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</RelativeLayout>