<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".views.fragment.social.SearchFriendFragment">

    <RelativeLayout
        android:paddingVertical="@dimen/_12sdp"
        android:background="@color/primary"
        android:orientation="horizontal"
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/back"
            android:paddingHorizontal="@dimen/_12sdp"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/default_label" />
        <TextView
            android:layout_toEndOf="@+id/back"
            android:theme="@style/Toolbar.Title"
            android:text="@string/search_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/form_s"
        android:layout_marginTop="@dimen/_12sdp"
        android:paddingHorizontal="@dimen/_8sdp"
        android:layout_below="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:imeOptions="actionSearch"
            app:endIconMode="clear_text"
            android:hint="@string/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ip_search"
                android:inputType="text"
                android:paddingHorizontal="@dimen/_8sdp"
                android:imeOptions="actionSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>
    <RelativeLayout
        android:visibility="invisible"
        android:id="@+id/form_result"
        android:paddingHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_below="@+id/form_s"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:src="@drawable/avatar"
            app:civ_border_width="1dp"
            app:civ_border_color="@color/primary"/>
        <RelativeLayout
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_toEndOf="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/full_name"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:text="@string/default_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:visibility="invisible"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_below="@id/full_name"
                android:id="@+id/content"
                android:textColor="@color/gray_20"
                android:text="@string/default_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>